--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/assets//ariva-logo.png" alt="ARIVA Logo" class="logo" />
+    <img src="assets/ariva-logo.png" alt="ARIVA Logo" class="logo" />
     <h2>Reset Your PIN</h2>
     <input 
       type="text" 
