fixed image rendering

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
     // 🔹 Replace with your Firebase config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyBebWNO8Qwaxiina0N-_i18tkLFNBoGRpM",
+      authDomain: "ariva-loyalty-3c618.firebaseapp.com",
+      projectId: "ariva-loyalty-3c618",
+      appId: "1:1099259920063:web:bbac7b689036f250a1900a"
     };
 
     const app = initializeApp(firebaseConfig);
