fixed other bugs

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <!-- Error Modal -->
   <div id="errorModal" class="modal">
     <div class="modal-content">
-      <svg class="modal-icon error-icon" viewBox="0 0 24 24">
-        <circle cx="12" cy="12" r="11" fill="currentColor" opacity="0.2"/>
-        <path fill="currentColor" d="M12 13.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3zM12 7.5a1 1 0 011 1v4a1 1 0 01-2 0v-4a1 1 0 011-1z"/>
+      <svg class="modal-icon" viewBox="0 0 24 24">
+        <path class="checkmark" fill="none" stroke="currentColor" stroke-width="2" d="M20 6L9 17L4 12"/>
       </svg>
-      <h3 class="modal-title">Link Expired</h3>
-      <p class="modal-message">This reset link has already been used or has expired. Please request a new reset link to continue.</p>
-      <button onclick="closeModal()" class="modal-button">Close</button>
+      <h3 class="modal-title">PIN Reset Successful!</h3>
+      <p class="modal-message">Your PIN has been successfully reset.<br>You can now use your new PIN to log in to the ARIVA Loyalty app.</p>
+      <p class="modal-subtitle">You can safely close this window now.</p>
+      <button class="modal-button">Close</button>
     </div>
   </div>
 
