fixed other bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h3 class="modal-title">PIN Reset Successful!</h3>
       <p class="modal-message">Your PIN has been successfully reset.<br>You can now use your new PIN to log in to the ARIVA Loyalty app.</p>
       <p class="modal-subtitle">You can safely close this window now.</p>
-      <button class="modal-button">Close</button>
+      <button class="modal-button" onclick="closeModal()">Close Window</button>
     </div>
   </div>
 
