fixed other bugs

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <!-- Error Modal -->
   <div id="errorModal" class="modal">
     <div class="modal-content">
-      <svg class="modal-icon" viewBox="0 0 24 24">
-        <path class="checkmark" fill="none" stroke="currentColor" stroke-width="2" d="M20 6L9 17L4 12"/>
-      </svg>
-      <h3 class="modal-title">PIN Reset Successful!</h3>
-      <p class="modal-message">Your PIN has been successfully reset.<br>You can now use your new PIN to log in to the ARIVA Loyalty app.</p>
-      <p class="modal-subtitle">You can safely close this window now.</p>
-      <button class="modal-button" onclick="closeModal()">Close Window</button>
+      <svg class="modal-icon" viewBox="0 0 24 24"></svg>
+      <h3 class="modal-title"></h3>
+      <p class="modal-message"></p>
+      <p class="modal-subtitle"></p>
+      <button class="modal-button"></button>
     </div>
   </div>
 
@@ -96,5 +94,7 @@
       }
     }
   </script>
+</body>
+</html>
 </body>
 </html>
