add a proper error message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3 class="modal-title"></h3>
       <p class="modal-message"></p>
       <p class="modal-subtitle"></p>
-      <button class="modal-button"></button>
+      <button type="button" class="modal-button">Close</button>
     </div>
   </div>
 
