add a proper error message

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <button onclick="resetPin()" disabled>
-      Reset PIN
+      <span>Reset PIN</span>
       <div class="spinner"></div>
     </button>
     <p id="message"></p>
