fixed other bugs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Error Modal -->
   <div id="errorModal" class="modal">
     <div class="modal-content">
+      <div class="modal-spinner"></div>
       <svg class="modal-icon" viewBox="0 0 24 24"></svg>
       <h3 class="modal-title"></h3>
       <p class="modal-message"></p>
@@ -96,5 +97,4 @@
   </script>
 </body>
 </html>
-</body>
 </html>
