fixed closing window

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     </div>
   </div>
 
+  <div id="successModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-spinner"></div>
+      <svg class="modal-icon" viewBox="0 0 24 24"></svg>
+      <h3 class="modal-title"></h3>
+      <p class="modal-message"></p>
+      <p class="modal-subtitle"></p>
+      <button type="button" class="modal-button"></button>
+    </div>
+  </div>
+
   <div class="container">
     <img src="assets/ariva-logo.png" alt="ARIVA Logo" class="logo" />
     <h2>Reset Your PIN</h2>
