fixed all the bugs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
   </div>
 
+  <!-- Success Modal -->
   <div id="successModal" class="modal">
     <div class="modal-content">
       <div class="modal-spinner"></div>
